<resources>
    <string name="app_name">Viziseg</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua.
    </string>
    <string name="save">Salvar</string>
    <string name="bio">Biografia</string>
    <string name="name">Nome</string>
    <string name="sign_out">Sair</string>
    <string name="description">Descrição</string>
    <string name="members">Participantes</string>
    <string name="new_group">Novo Grupo</string>
</resources>
