<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="utfpr.loyola.gabriel.viziseg.fragment.NewGroupFragment">

    <TextView
            android:id="@+id/new_group_label"
            android:text="@string/new_group"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:labelFor="@id/recycler_view_groups"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/new_group_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="150dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_name"
            app:layout_constraintVertical_bias="0.056"/>

    <TextView
            android:id="@+id/participants_label"
            android:text="@string/members"
            android:layout_width="wrap_content"
            android:labelFor="@id/recycler_view_groups"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText_description"
            android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_group_people"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/participants_label"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="1dp"/>

    <Button
            android:id="@+id/btn_save_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="?attr/colorAccent"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.973" android:layout_marginLeft="16dp"/>

</android.support.constraint.ConstraintLayout>